--- a/src/components/Instruction/Instruction.css
+++ b/src/components/Instruction/Instruction.css
@@ -1,7 +1,6 @@
 .instruction {
   position: absolute;
   top: 0;
-  backface-visibility: hidden;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
@@ -11,6 +10,7 @@
   height: 803px;
   background-color: #FFF;
   border-radius: 16px;
+  backface-visibility: hidden;
   transform: rotateY(180deg);
 }
 
@@ -19,20 +19,21 @@
   margin-bottom: 57px;
   text-align: center;
   font-size: 24px;
-  font-weight: 600;
+  font-weight: 500;
   line-height: normal;
 }
 
 .instruction__list {
   margin: 0;
-  margin-bottom: 36px;
+  margin-bottom: 43px;
   padding: 0;
-  padding-left: 29px;
+  padding-left: 32px;
   font-size: 22px;
+  font-weight: 500;
 }
 
 .instruction__item {
-  margin-bottom: 24px;
+  margin-bottom: 27px;
 }
 
 .instruction__item:last-child {
@@ -44,7 +45,7 @@
   margin-bottom: 8px;
   font-size: 22px;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 500;
   line-height: normal;
 }
 
@@ -53,7 +54,7 @@
   margin-left: -10px;
   font-size: 17px;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 500;
   line-height: normal;
 }
 
@@ -70,10 +71,11 @@
   align-self: center;
   font-size: 16px;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 500;
   line-height: normal;
   text-align: end;
   cursor: pointer;
+  margin-right: 37px;
 }
 
 .instruction__button::before {
@@ -83,6 +85,6 @@
   height: 48px;
   background-image: url(../../images/arrow-back.svg);
   background-repeat: no-repeat;
-  top: 5px;
-  left: 6px;
+  top: 9px;
+  left: 10px;
 }
