--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,9 +1,9 @@
-.customerform {
+.customer-form {
   position: absolute;
   backface-visibility: hidden;
 }
 
-.customerform:active .instruction {
+.customer-form:active .instruction {
   transform: rotateY(180deg);
 }
 
@@ -24,7 +24,7 @@
   margin-bottom: 48px;
   text-align: center;
   font-size: 22px;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .form__input-container {
@@ -42,13 +42,13 @@
 .form__input {
   box-sizing: border-box;
   width: 100%;
-  padding: 15px;
+  padding: 14px 15px 15px 16px;
   margin-bottom: 32px;
   height: 55px;
   border: none;
   border-bottom: 1px solid #000;
   font-size: 22px;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .form__input.form__input_type_error {
@@ -63,19 +63,19 @@
   display: none;
   color: #05AC6A;  
   font-size: 22px;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .form__input:focus + .form__label:not(.form__label_type_upload):not(.form__label_type_submit) {
   display: block;
   position: absolute;
   left: 15px;
-  bottom: 70px;
+  top: -15px;
 }
 
 .form__input::placeholder {
   font-size: 22px;
-  font-weight: 600;
+  font-weight: 500;
   color: #000;
 }
 
@@ -92,7 +92,7 @@
   border-radius: 8px;
   border: 1px solid #000;  
   font-size: 22px;
-  font-weight: 600;
+  font-weight: 500;
   background: transparent;
   outline: none;
   resize: none;
@@ -110,7 +110,7 @@
   color: transparent;
 }
 
-.form__textarea-button {
+.form__tip-button {
   position: absolute;
   background-image: url(../../images/question.svg);
   background-repeat: no-repeat;
@@ -125,20 +125,26 @@
   cursor: pointer;
 }
 
-.form__textarea-button:hover {
+.form__tip-button:hover {
   background-image: url(../../images/question-hover.svg);
 }
 
 .form__textarea::placeholder {
   font-size: 22px;
-  font-weight: 600;
+  font-weight: 500;
   color: #000;
 }
 
-.form__input_type_upload {
-  opacity: 0;
+.form__input_type_upload {  
   position: absolute;
-  z-index: -1;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
   overflow: hidden;
 }
 
@@ -196,15 +202,16 @@
 }
 
 .form__input_type_agreement {
-  opacity: 0;
   position: absolute;
-  z-index: -1;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
   overflow: hidden;
-}
-
-.form__label_type_submit {
-  position: relative;
-  color: #000;
 }
 
 .form__agreement-link {
@@ -241,13 +248,15 @@
 }
 
 .form__label_type_submit {
+  position: relative;
   display: block;
   margin-left: 26px;
-  width: 230px;
+  width: 232px;
   font-size: 16px;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 500;
   text-align: center;
+  color: #000;
 }
 
 .form__button {
